Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32878

Android: Rotation doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.1.1, 5.2.0 RC1
    • 5.1.0
    • QPA
    • None
    • Android
    • 05ddae12d18a348afd942fd85a8d8773698da3a1, 8fd9fe209934ac92210ed3b81723ad5e21a98a30

    Description

      Run any QML app (such as Qt 5 Everywhere) on an Android device and turn the device to automatically change the orientation.

      The scene will not resize properly. This worked on earlier Qt for Android versions.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              esabraha Eskil Abrahamsen Blomfeldt
              Votes:
              3 Vote for this issue
              Watchers:
              16 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes